--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": ">= 0.2.0",
     "grunt-contrib-coffee": "~0.6.2",
-    "grunt-contrib-copy": "~0.4.0"
+    "grunt-contrib-copy": ">=0.3.0"
   }
 }
